--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "An example of Elm application.",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "api": "node api.js",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "dev": "webpack-dev-server --port 3000"
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,16 @@
   },
   "homepage": "https://github.com/rodrigo-morais/elm-role-playing-game#readme",
   "dependencies": {
-    "json-server": "^0.8.9"
+    "basscss": "^7.1.1",
+    "css-loader": "^0.23.1",
+    "elm-webpack-loader": "^2.0.1",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.5.0",
+    "json-server": "^0.8.9",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
